# CreampuffBOT

./: .gitignore  LICENSE.md  README.md  pyproject.toml  requirements.txt
linux_mac_tesseract/: README.md
ocr/: words.txt
src/: display.py  driver.py  gui.py  hit.py  hook_skimage.py  image_preprocessor.py  image_processor.py  main.py  video_processor.py
src/tests/: test_main.py
tests/: test_main.py
windows_tesseract/: README.md
